# CylinderArm

./: .gitignore  build_scripts.bash
.github/workflows/: main.yml
esp32c3/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.hub
esp32c3/components/distance/: CMakeLists.txt  distance.c
esp32c3/components/esp_now_setup/: CMakeLists.txt  esp_now_setup.c  esp_now_setup.h
esp32c3/components/motor/: CMakeLists.txt  motor.c  motor.h
esp32c3/components/pid/: CMakeLists.txt  pid.c  pid.h
esp32c3/components/pins/: pins.h
esp32c3/components/position/: CMakeLists.txt  position.c
esp32c3/components/sensor/: CMakeLists.txt  sensor.h
esp32c3/main/: CMakeLists.txt  Kconfig.projbuild  distributed_main.c  hub_main.c
gui/: app.py  config.json  config.py  messages.py  robot_threading.py  spi.py  spi_process.py  widgets.py
robot_arm_pcb/: robot_arm_pcb.kicad_prl  robot_arm_pcb.kicad_pro
runner/: runner.ino
runner/src/: data.h  kinematics.c  test.c  test.h
src/cylinder_arm_cpp_pkg/: CMakeLists.txt  package.xml
src/cylinder_arm_interfaces/: CMakeLists.txt  package.xml
src/cylinder_arm_interfaces/msg/: SPISend.msg
src/cylinder_arm_interfaces/srv/: HardwareStartReq.srv
src/cylinder_arm_py_pkg/: package.xml  setup.cfg  setup.py
src/cylinder_arm_py_pkg/cylinder_arm_py_pkg/: app.py  hardware_service.py
src/cylinder_arm_py_pkg/cylinder_arm_py_pkg/robot_interaction/: event.py  messages.py  spi_thread.py  touchscreen_node.py  widgets.py
src/cylinder_arm_py_pkg/launch/: kivy_launch.py
test/: Makefile  avr.sh  avrdude_spi.conf  blink.c  blink.hex  gpio.py  kinematics.py  reset_spi.sh  spi.py  visualize.py
test/firmware/: application.h  distance.c  distance.h  h_bridge.h  i2c.c  i2c.h  limit_switch.c  limit_switch.h  main.c  pid.h  servo.h  spi.c  spi.h  stepper.c  stepper.h  task_scheduler.c  task_scheduler.h  watchdog.c  watchdog.h
