<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cylinder_arm_py_pkg</name>
  <version>0.0.0</version>
  <description>Python Nodes for my Cylinder Arm Project</description>
  <maintainer email="knpmths@gmail.com">kphan20</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>cylinder_arm_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
